grammar.txt
program:
  | statement_list

statement_list:
  | statement
  | statement statement_list

literal:
  | int_literal
  | bool_literal
  | string_literal
  | list_literal

expression:
  | disjunction

disjunction:
  | disjunction '||' conjunction
  | conjunction

conjunction:
  | conjunction '&&' comparison
  | comparison

comparison:
  | comparison ('<'|'<='|'>'|'>='|'=='|'!=') sum
  | sum

sum:
  | sum ('+'|'-') term
  | term

term:
  | term ('*'|'/'|'%') factor
  | factor

factor:
  | literal
  | variable_name
  | '(' expression ')'

statement:
  | function_def_stmt
  | while_stmt
  | 'if' if_body
  | 'return'
  | 'break'
  | 'continue'
  | function_identifier
  | builtin_identifier
  | op_code  # This is temporary and will be removed

function_identifier:
  | string_literal

builtin_identifier:
  | string_literal

function_signature:
  | name ',' function_signature
  | name

function_def_stmt:
  | 'function' '(' function_signature ')' 'do' statement_list 'end'
  | 'function' '(' function_signature ')' 'do' 'end'

while_stmt:
  | 'while' statement_list 'do' statement_list 'end'
  | 'while' statement_list 'do' 'end'

if_body:
  | statement_list 'do' statement_list 'elif' if_body
  | statement_list 'do' statement_list 'end'
